Trying to fix overlay on mobile browsers

--- a/app/components/bottom-sheet/styles.scss
+++ b/app/components/bottom-sheet/styles.scss
@@ -1,14 +1,14 @@
 & {
-  display: grid;
-  height: 100vh;  
-  left: 0;  
-  position: absolute;  
+  position: fixed;
+  display: block;
+  width: 100%;
+  height: 100%;
   top: 0;
-  width: 100vw;  
-}
-
-.overlay {
-  background-color: #00000060;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0,0,0,0.5);
+  cursor: pointer;
 }
 
 .bottom-sheet {
