--- a/app/components/nav-bar/styles.scss
+++ b/app/components/nav-bar/styles.scss
@@ -6,7 +6,7 @@ nav {
   flex-direction: row;
   justify-content: space-around;
   border-top: 1px solid #ccc;
-  box-shadow: 0px -2px 2px #ddd;
+  box-shadow: 0px -1px 2px #ddd;
   padding: 10px;
   font-size: 1.6rem;
 }
