--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -61,6 +61,7 @@ input:focus {
     grid-area: header;
     line-height: $header-height;
     padding-left: 5px;
+    z-index: 1;
   }
   
   & section {
